feat: user can now navigate to each service without reloading entire page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="Navbar"></div>
     <div id="Home"></div>
     <div id="CreateNote"></div>
+    <div id="Profile"></div>
 
     <script src="/dist/single-spa.config.js"></script>
 </body>
