chore: more on restructuring

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="Navbar"></div>
     <div id="Home"></div>
-    <div id="CreateNote"></div>
+    <div id="Notes"></div>
     <div id="Profile"></div>
 
     <script src="/dist/single-spa.config.js"></script>
